<resources>
    <string name="app_name">ICMSApp_aula</string>
    <string name="digite_estado">Digite o estado:</string>"
    <string name="img_calculadora">Imagem da calculadora</string>
    <string name="estado_sigla">Estado(sigla)</string>
    <string name="txt_mercadoria">Digite o valor da mercadoria: </string>
    <string name="vlr_mercadoria">Digite o valor aqui</string>
    <string name="txt_porcentagem">Porcentagem do ICMS: </string>
    <string name="vlr_porcentagem">%</string>
    <string name="txt_totalMercadoria">Valor total da mercadoria: </string>
    <string name="vlr_totalMercadoria">R$ 0,00</string>
    <string name="btn_calcular">Calcular</string>
</resources>