<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:contentDescription="@string/img_calculadora"
            android:src="@drawable/img_calculo"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="centerCrop"/>

        <TextView
            android:theme="@style/testopadrao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/digite_estado"
            android:textSize="24sp"/>

        <EditText
            android:id="@+id/editTextEstado"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:inputType="textCapCharacters"
            android:autofillHints="Digite a sigla do estado"
            android:hint="@string/estado_sigla"/>

        <TextView
            android:theme="@style/testopadrao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_mercadoria"
            android:textSize="24sp"/>

        <EditText
            android:id="@+id/editTextValor"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:inputType="numberDecimal"
            android:layout_marginBottom="15dp"
            android:autofillHints="Digite o valor da mercadoria"
            android:hint="@string/vlr_mercadoria"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#e5efff"
            android:padding="8dp"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <TextView
                android:theme="@style/testopadrao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_porcentagem"
                android:textSize="20sp"
                android:textAlignment="center"/>

            <TextView
                android:id="@+id/textViewPorcentagem"
                android:theme="@style/testopadrao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/vlr_porcentagem"
                android:textSize="20sp"
                android:textAlignment="center"/>

            <TextView
                android:theme="@style/testopadrao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_totalMercadoria"
                android:textSize="20sp"
                android:textAlignment="center"/>
            <TextView
                android:id="@+id/textViewTotal"
                android:theme="@style/testopadrao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/vlr_totalMercadoria"
                android:textAlignment="center"/>
        </LinearLayout>

        <Button
            android:id="@+id/buttonCalcular"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/btn_calcular"
            android:onClick="calcular"
            android:textSize="20sp"/>

    </LinearLayout>
</ScrollView>